[package]
name = "sentencebreak"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <rob00x@gmail.com>"]
license = "MIT"
description = "A tool to add sentence breaks to text."
readme = "README.md"
homepage = "https://github.com/robinlovelace/sentencebreak"
repository = "https://github.com/robinlovelace/sentencebreak"
keywords = ["cli", "breaks", "markdown", "text"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.10.0"
